--- a/index.html
+++ b/index.html
@@ -357,7 +357,9 @@
          <i class="ri-heart-line"></i>
         </div>
         <div class="bag">
-         <i class="ri-shopping-bag-line"></i>
+         <a href="shop.html">
+          <i class="ri-shopping-bag-line"></i>
+         </a>
         </div>
        </div>
       </div>
@@ -388,7 +390,7 @@
 
   <main>
     <div class="background-image">
-      <img src="nike-just-do-it.jpg" alt="">
+      <img src="images/nike-just-do-it.jpg" alt="">
     </div>
 
     <div class="description">
@@ -405,7 +407,7 @@
 
     <div class="products">
       <div class="image1">
-        <img src="nike-just-do-it (1).jpg" alt="">
+        <img src="images/nike-just-do-it (1).jpg" alt="">
         <div class="text">
           <h5>Just Dropped</h5>
           <h3>The Aura Bag</h3>
@@ -413,7 +415,7 @@
         </div>
       </div>
       <div class="image2">
-        <img src="nike-just-do-it (2).jpg" alt="">
+        <img src="images/nike-just-do-it (2).jpg" alt="">
         <div class="text">
           <h5>New Arrivals</h5>
           <h3>Air Jordan 4 'Oxidized Green'</h3>
@@ -421,7 +423,7 @@
         </div>
       </div>
       <div class="image3">
-        <img src="nike-just-do-it (3).jpg" alt="">
+        <img src="images/nike-just-do-it (3).jpg" alt="">
         <div class="text">
           <h5>Don't Waste Your Energy</h5>
           <h3>Run in Pegasus 41</h3>
@@ -429,7 +431,7 @@
         </div>
       </div>
       <div class="image4">
-        <img src="nike-just-do-it (4).jpg" alt="">
+        <img src="images/nike-just-do-it (4).jpg" alt="">
         <div class="text">
           <h5>Look Good Play Good</h5>
           <h3>Prime Time Gear</h3>
@@ -448,7 +450,7 @@
     </div>
 
     <div class="second-image">
-      <img src="nike-just-do-it (5).jpg" alt="">
+      <img src="images/nike-just-do-it (5).jpg" alt="">
     </div>
 
     <div class="classics">
@@ -456,22 +458,22 @@
     </div>
     <div class="shoes">
       <div class="shoe1">
-        <img src="vomero.jpg" alt="">
+        <img src="images/vomero.jpg" alt="">
       </div>
       <div class="shoe1">
-        <img src="air-max.jpg" alt="">
+        <img src="images/air-max.jpg" alt="">
       </div>
       <div class="shoe1">
-        <img src="airjordan.jpg" alt="">
+        <img src="images/airjordan.jpg" alt="">
       </div>
       <div class="shoe1">
-        <img src="dunk.jpg" alt="">
+        <img src="images/dunk.jpg" alt="">
       </div>
       <div class="shoe1">
-        <img src="airfoce1.jpg" alt="">
+        <img src="images/airfoce1.jpg" alt="">
       </div>
       <div class="shoe1">
-        <img src="blazer.jpg" alt="">
+        <img src="images/blazer.jpg" alt="">
       </div>
 
     </div>
@@ -482,7 +484,7 @@
 
     <div class="products1">
       <div class="image1">
-        <img src="nike-just-do-it (7).jpg" alt="">
+        <img src="images/nike-just-do-it (7).jpg" alt="">
         <div class="text">
           <h5>Member Product</h5>
           <h3>Your Exclusive Access</h3>
@@ -490,7 +492,7 @@
         </div>
       </div>
       <div class="image1">
-        <img src="nike-just-do-it (8).jpg" alt="">
+        <img src="images/nike-just-do-it (8).jpg" alt="">
         <div class="text">
           <h5>Sports & Wellness App</h5>
           <h3>Movement Where You're At</h3>
@@ -498,7 +500,7 @@
         </div>
       </div>
       <div class="image1 hair">
-        <img src="nike-just-do-it (9).jpg" alt="">
+        <img src="images/nike-just-do-it (9).jpg" alt="">
         <div class="text">
           <h5>Nike By You</h5>
           <h3>Your Customization Services</h3>
