--- a/shop.html
+++ b/shop.html
@@ -364,6 +364,10 @@
         </div>
       </div>
 
+      <div class="products container">
+        
+      </div>
+
       <footer>
         <div class="footer-content1">
           <div class="part1">
