creating the shop html

--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       rel="stylesheet"
   />
+  </head>
     <title>Addidas</title>
 </head>
 <body>
@@ -364,8 +365,52 @@
         </div>
       </div>
 
-      <div class="products container">
-        
+      <div class="products-container d-flex">
+        <div class="product-small">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+
+          
+
+        </div>
+        <div class="product-image">
+          <div class="image-product-container">
+            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          </div>
+        </div>
+        <div class="product-content">
+          <div class="product-title">Nike Sportswear Club</div>
+          <div class="product-subtitle">
+            Men's T-Shirt
+          </div>
+          <div class="product-price">€24.99</div>
+          <div class="product-content-image">
+            <div class="product-content-image-one">
+              <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+              <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+              <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+
+            </div>
+          </div>
+          <div class="product-sizes">
+            <div class="product-content-size-title">
+              <div class="product-content-size-title-one">Select Size</div>
+              <div class="product-content-size-title-two">Size Guide</div>
+
+            </div>
+            <div class="product-sizes-specific"></div>
+            <button class="product-sizes-button main">Add to Bag</button>
+            <button class="product-sizes-button">Favourite</button>
+
+          </div>
+        </div>
       </div>
 
       <footer>
