done with shop html

--- a/shop.html
+++ b/shop.html
@@ -365,20 +365,26 @@
         </div>
       </div>
 
-      <div class="products-container d-flex">
+      <div class="products-container">
         <div class="product-small">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-
-          
-
+          <div class="product-small-image">
+            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          </div>
+          <div class="product-small-image">
+            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          </div>
+          <div class="product-small-image">
+            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          </div>
+          <div class="product-small-image">
+            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          </div>
+          <div class="product-small-image">
+            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          </div>
+          <div class="product-small-image">
+            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+          </div>
         </div>
         <div class="product-image">
           <div class="image-product-container">
@@ -396,6 +402,9 @@
               <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
               <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
               <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+              <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+
+
 
             </div>
           </div>
@@ -405,9 +414,16 @@
               <div class="product-content-size-title-two">Size Guide</div>
 
             </div>
-            <div class="product-sizes-specific"></div>
+            <div class="product-sizes-specific">
+              <button class="bx">XS</button>
+              <button class="bx">S</button>
+              <button class="bx">M</button>
+              <button class="bx">L</button>
+              <button class="bx">XL</button>
+
+            </div>
             <button class="product-sizes-button main">Add to Bag</button>
-            <button class="product-sizes-button">Favourite</button>
+            <button class="product-sizes-button sub-main">Favourite</button>
 
           </div>
         </div>
@@ -566,5 +582,7 @@
           </div>
         </div>
       </footer>
+
+      <script src="main.js"></script>
 </body>
 </html>
