--- a/shop.html
+++ b/shop.html
@@ -365,30 +365,16 @@
         </div>
       </div>
 
-      <div class="products-container">
+      <div class="products-container js-products-container">
         <div class="product-small">
           <div class="product-small-image">
-            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+            <img src="images/green/1.jpeg" alt="">
           </div>
-          <div class="product-small-image">
-            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          </div>
-          <div class="product-small-image">
-            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          </div>
-          <div class="product-small-image">
-            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          </div>
-          <div class="product-small-image">
-            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          </div>
-          <div class="product-small-image">
-            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-          </div>
+          
         </div>
         <div class="product-image">
           <div class="image-product-container">
-            <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+            <img src="images/green/2.jpeg" alt="">
           </div>
         </div>
         <div class="product-content">
@@ -399,10 +385,10 @@
           <div class="product-price">€24.99</div>
           <div class="product-content-image">
             <div class="product-content-image-one">
-              <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-              <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-              <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
-              <img src="images/M+NSW+CLUB+TEE.jpeg" alt="">
+              <img src="images/green/6.jpeg" alt="">
+              <img src="images/green/6.jpeg" alt="">
+              <img src="images/green/6.jpeg" alt="">
+              <img src="images/green/6.jpeg" alt="">
 
 
 
