change image on hover

--- a/shop.html
+++ b/shop.html
@@ -366,7 +366,7 @@
       </div>
 
       <div class="products-container js-products-container">
-        <div class="product-small">
+        <!-- <div class="product-small">
           <div class="product-small-image">
             <img src="images/green/1.jpeg" alt="">
           </div>
@@ -412,7 +412,7 @@
             <button class="product-sizes-button sub-main">Favourite</button>
 
           </div>
-        </div>
+        </div> -->
       </div>
 
       <footer>
