--- a/shop.html
+++ b/shop.html
@@ -570,6 +570,6 @@
       </footer>
 
       <script src="main.js"></script>
-      <script src="shop.js"></script>
+      <script type="module" src="shop.js"></script>
 </body>
 </html>
