just lost my images

--- a/shop.html
+++ b/shop.html
@@ -366,53 +366,55 @@
       </div>
 
       <div class="products-container js-products-container">
-        <!-- <div class="product-small">
-          <div class="product-small-image">
-            <img src="images/green/1.jpeg" alt="">
+        <div class="pro-id">
+          <div class="product-small">
+            <div class="product-small-image">
+              <img src="images/green/1.jpeg" alt="">
+            </div>
+            
           </div>
-          
+          <div class="product-image">
+            <div class="image-product-container">
+              <img src="images/green/2.jpeg" alt="">
+            </div>
+          </div>
+          <div class="product-content">
+            <div class="product-title">Nike Sportswear Club</div>
+            <div class="product-subtitle">
+              Men's T-Shirt
+            </div>
+            <div class="product-price">€24.99</div>
+            <div class="product-content-image">
+              <div class="product-content-image-one">
+                <img src="images/green/6.jpeg" alt="">
+                <img src="images/green/6.jpeg" alt="">
+                <img src="images/green/6.jpeg" alt="">
+                <img src="images/green/6.jpeg" alt="">
+  
+  
+  
+              </div>
+            </div>
+            <div class="product-sizes">
+              <div class="product-content-size-title">
+                <div class="product-content-size-title-one">Select Size</div>
+                <div class="product-content-size-title-two">Size Guide</div>
+  
+              </div>
+              <div class="product-sizes-specific">
+                <button class="bx">XS</button>
+                <button class="bx">S</button>
+                <button class="bx">M</button>
+                <button class="bx">L</button>
+                <button class="bx">XL</button>
+  
+              </div>
+              <button class="product-sizes-button main">Add to Bag</button>
+              <button class="product-sizes-button sub-main">Favourite</button>
+  
+            </div>
+          </div>
         </div>
-        <div class="product-image">
-          <div class="image-product-container">
-            <img src="images/green/2.jpeg" alt="">
-          </div>
-        </div>
-        <div class="product-content">
-          <div class="product-title">Nike Sportswear Club</div>
-          <div class="product-subtitle">
-            Men's T-Shirt
-          </div>
-          <div class="product-price">€24.99</div>
-          <div class="product-content-image">
-            <div class="product-content-image-one">
-              <img src="images/green/6.jpeg" alt="">
-              <img src="images/green/6.jpeg" alt="">
-              <img src="images/green/6.jpeg" alt="">
-              <img src="images/green/6.jpeg" alt="">
-
-
-
-            </div>
-          </div>
-          <div class="product-sizes">
-            <div class="product-content-size-title">
-              <div class="product-content-size-title-one">Select Size</div>
-              <div class="product-content-size-title-two">Size Guide</div>
-
-            </div>
-            <div class="product-sizes-specific">
-              <button class="bx">XS</button>
-              <button class="bx">S</button>
-              <button class="bx">M</button>
-              <button class="bx">L</button>
-              <button class="bx">XL</button>
-
-            </div>
-            <button class="product-sizes-button main">Add to Bag</button>
-            <button class="product-sizes-button sub-main">Favourite</button>
-
-          </div>
-        </div> -->
       </div>
 
       <footer>
