add to cart button modification

--- a/shop.html
+++ b/shop.html
@@ -409,7 +409,7 @@
                 <button class="bx">XL</button>
   
               </div>
-              <button class="product-sizes-button main">Add to Bag</button>
+              <button class="product-sizes-button main js-add-to-cart">Add to Bag</button>
               <button class="product-sizes-button sub-main">Favourite</button>
   
             </div>
