--- a/shop.html
+++ b/shop.html
@@ -358,7 +358,8 @@
              <i class="ri-heart-line"></i>
             </div>
             <div class="bag">
-             <i class="ri-shopping-bag-line"></i>
+             <i class="ri-shopping-bag-line js-cart"></i>
+             <p class="add-to-cart-num">0</p>
             </div>
            </div>
           </div>
