add to cart onclick button

--- a/shop.html
+++ b/shop.html
@@ -359,7 +359,7 @@
             </div>
             <div class="bag">
              <i class="ri-shopping-bag-line js-cart"></i>
-             <p class="add-to-cart-num">0</p>
+             <p class="add-to-cart-num js-add-to-cart">0</p>
             </div>
            </div>
           </div>
