--- a/shop.html
+++ b/shop.html
@@ -369,13 +369,13 @@
       <div class="products-container js-products-container">
         <div class="pro-id">
           <div class="product-small">
-            <div class="product-small-image">
+            <div class="product-small-image js-product-small-image">
               <img src="images/green/1.jpeg" alt="">
             </div>
             
           </div>
           <div class="product-image">
-            <div class="image-product-container">
+            <div class="image-product-container js-image-product-container">
               <img src="images/green/2.jpeg" alt="">
             </div>
           </div>
@@ -386,7 +386,7 @@
             </div>
             <div class="product-price">€24.99</div>
             <div class="product-content-image">
-              <div class="product-content-image-one">
+              <div class="product-content-image-one js-product-content-image-one">
                 <img src="images/green/6.jpeg" alt="">
                 <img src="images/green/6.jpeg" alt="">
                 <img src="images/green/6.jpeg" alt="">
