--- a/shop.html
+++ b/shop.html
@@ -369,14 +369,22 @@
       <div class="products-container js-products-container">
         <div class="pro-id">
           <div class="product-small">
-            <div class="product-small-image js-product-small-image">
+            <div class="product-small-image js-styles-panel">
               <img src="images/green/1.jpeg" alt="">
+              <img src="images/green/2.jpeg" alt="">
+              <img src="images/green/3.jpeg" alt="">
+              <img src="images/green/4.jpeg" alt="">
+              <img src="images/green/5.jpeg" alt="">
+              <img src="images/green/6.jpeg" alt="">
+              <img src="images/green/7.png" alt="">
+
             </div>
             
           </div>
           <div class="product-image">
             <div class="image-product-container js-image-product-container">
-              <img src="images/green/2.jpeg" alt="">
+              <img id="mainImage" src="images/green/2.jpeg" alt="">
+              
             </div>
           </div>
           <div class="product-content">
@@ -387,10 +395,10 @@
             <div class="product-price">€24.99</div>
             <div class="product-content-image">
               <div class="product-content-image-one js-product-content-image-one">
-                <img src="images/green/6.jpeg" alt="">
-                <img src="images/green/6.jpeg" alt="">
-                <img src="images/green/6.jpeg" alt="">
-                <img src="images/green/6.jpeg" alt="">
+                <img src="images/green/6.jpeg" alt="" onclick="changeClothing('green')">
+                <img src="images/grey/grey.png" alt="" onclick="changeClothing('grey')">
+                <img src="images/black/black1.png" alt="" onclick="changeClothing('black')">
+                <img src="images/white/white.jpeg" alt="" onclick="changeClothing('white')">
   
   
   
@@ -571,7 +579,7 @@
           </div>
         </div>
       </footer>
-      <script src="main.js"></script>
       <script type="module" src="shop.js"></script>
+      <script src="main.js" defer></script>
 </body>
 </html>
