--- a/shop.html
+++ b/shop.html
@@ -580,6 +580,6 @@
         </div>
       </footer>
       <script type="module" src="shop.js"></script>
-      <script src="main.js" defer></script>
+      <script type="module" src="main.js" defer></script>
 </body>
 </html>
