updated the oclik to change the sizes too

--- a/shop.html
+++ b/shop.html
@@ -370,13 +370,7 @@
         <div class="pro-id">
           <div class="product-small">
             <div class="product-small-image js-styles-panel">
-              <img src="images/green/1.jpeg" alt="">
-              <img src="images/green/2.jpeg" alt="">
-              <img src="images/green/3.jpeg" alt="">
-              <img src="images/green/4.jpeg" alt="">
-              <img src="images/green/5.jpeg" alt="">
-              <img src="images/green/6.jpeg" alt="">
-              <img src="images/green/7.png" alt="">
+             
 
             </div>
             
@@ -410,7 +404,7 @@
                 <div class="product-content-size-title-two">Size Guide</div>
   
               </div>
-              <div class="product-sizes-specific">
+              <div class="product-sizes-specific js-sizes">
                 <button class="bx">XS</button>
                 <button class="bx">S</button>
                 <button class="bx">M</button>
