--- a/shop.html
+++ b/shop.html
@@ -378,6 +378,7 @@
           <div class="product-image">
             <div class="image-product-container js-image-product-container">
               <img id="mainImage" src="images/green/2.jpeg" alt="">
+              <video id="mainVideo" style="display: none;" muted loop></video>
               
             </div>
           </div>
