added html add to cart

--- a/shop.html
+++ b/shop.html
@@ -419,7 +419,39 @@
             </div>
           </div>
         </div>
+        <div class="cart-added-items">
+          <div class="cart-added-top">
+            <div class="top-left">
+              <div class="cart-icon">
+                <i class="ri-check-line"></i>
+              </div>
+              <div class="cart-added-top-content">
+                <p class="product-title">Added to Cart</p>
+            </div>
+            </div>
+            <div class="top-right">
+              <div class="cart-icon">
+                <i class="ri-close-line js-close"></i>
+              </div>
+            </div>
+          </div>  
+          <div class="cart-added-mid">
+            <div class="cart-added-mid-image">
+              <img src="images/green/2.jpeg" alt="">
+            </div>
+            <div class="cart-added-mid-content cart-left">
+              <p class="product-price">Nike Sportswear Club</p>
+              <p class="product-subtitle">Men's T-shirt</p>
+              <p class="product-subtitle">Size XS</p>
+            </div>
+          </div>
+          <div class="cart-bottom">
+              <button class="product-sizes-button main js-add-to-cart" onclick="incrementCounter()">Add to Bag</button>
+              <button class="product-sizes-button sub-main">Favourite</button>
+          </div>
+        </div>
       </div>
+
 
       <footer>
         <div class="footer-content1">
