trying to add agradient on top of the entire body

--- a/shop.html
+++ b/shop.html
@@ -366,6 +366,8 @@
         </div>
       </div>
 
+
+
       <div class="products-container js-products-container">
         <div class="pro-id">
           <div class="product-small">
@@ -453,6 +455,10 @@
           </div>
         </div>
       </div>
+
+      <!-- continue from here -->
+      <div class="overlay js-overlay"></div>
+
 
 
       <footer>
