fuck lazy again

--- a/shop.html
+++ b/shop.html
@@ -451,7 +451,7 @@
           </div>
           <div class="cart-bottom">
             <button class="product-sizes-button sub-main">View Bag(2)</button>
-              <button class="product-sizes-button main js-add-to-cart" onclick="incrementCounter()">Checkout</button>
+              <button class="product-sizes-button main js-add-to-cart">Checkout</button>
           </div>
         </div>
       </div>
