updated my add to cart link link in mobile

--- a/index.html
+++ b/index.html
@@ -370,7 +370,9 @@
     <div class="left1">
       <i class="ri-search-line"></i>
       <i class="ri-user-3-fill"></i>
-      <i class="ri-shopping-bag-line"></i>
+      <a href="shop.html">
+        <i class="ri-shopping-bag-line"></i>
+       </a>
       <i class="ri-menu-line"></i>
     </div>
   </div>
