starting the day

--- a/shop.html
+++ b/shop.html
@@ -389,7 +389,7 @@
             <div class="product-subtitle">
               Men's T-Shirt
             </div>
-            <div class="product-price">€24.99</div>
+            <div class="product-price js-product-price">€24.99</div>
             <div class="product-content-image">
               <div class="product-content-image-one js-product-content-image-one">
                 <img src="images/green/6.jpeg" alt="" onclick="changeClothing('green')">
